fix: skeleton styles and alignment
- for both desktop and mobile
- move related styles in one mixin/file

--- a/src/app/pages/object/object.component.scss
+++ b/src/app/pages/object/object.component.scss
@@ -81,39 +81,3 @@
     }
   }
 }
-
-.title {
-  display: flex;
-  flex-flow: column;
-
-  & .prototype {
-    margin-bottom: 12px;
-
-    & .skt-rect {
-      margin: 3px;
-    }
-  }
-}
-
-.actions {
-  display: flex;
-
-  & .skt-circle {
-    width: 24px;
-    height: 24px;
-    margin: 36px 12px 12px;
-
-    background-color: var(--mat-divider-color);
-  }
-
-  @media (min-width: 1025px) {
-    position: absolute;
-    right: 40px;
-  }
-
-  @media (max-width: 1024px) {
-    justify-content: center;
-    align-items: center;
-    height: 48px;
-  }
-}
